# IsingModel

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: IsingModel.h  Model.h
src/: IsingModel.cpp  simulatedAnnealing.cpp
tests/: IsingModelTest.cpp
